Adjust code to use java 17 features